# resume.rs

./: .gitignore  Cargo.toml  README.md  resume.rs  resume.tex  resume.yaml
crates/resume/: Cargo.toml
crates/resume/src/: cli.rs  lib.rs  main.rs  pdf.rs  resume.rs  tex.rs
crates/texformat/: Cargo.toml
crates/texformat/src/: lib.rs
crates/texformat_test/: Cargo.toml
crates/texformat_test/src/: main.rs
example/: resume.tex  resume.yaml
